--- a/AjnaConnector/package.json
+++ b/AjnaConnector/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "firebase": "^6.2.4",
     "geofirestore": "^3.3.1"
+    "sphericalmercator": "^1.1.0"
   },
   "devDependencies": {},
   "scripts": {
