--- a/AjnaConnector/package.json
+++ b/AjnaConnector/package.json
@@ -2,13 +2,16 @@
   "name": "ajnaconnector",
   "version": "0.0.1",
   "description": "provides connection handling for the Ajna ecosystem",
-  "main": "AjnaConnector.js",
+  "main": "ajna-connector.js",
   "dependencies": {
-    "@turf/transform-translate": "^5.1.5",
-    "@turf/turf": "^5.1.6",
-    "firebase": "^6.6.2",
-    "geofirestore": "^3.4.1",
-    "sphericalmercator": "^1.1.0"
+    "@turf/transform-translate": "latest",
+    "@turf/turf": "latest",
+    "@firebase/app": "latest",
+    "@firebase/auth": "latest",
+    "@google-cloud/firestore": "latest",
+    "geofirestore": "latest",
+    "axios": "latest",
+    "get-pixels": "latest"
   },
   "devDependencies": {},
   "scripts": {
